[gd_scene load_steps=10 format=3 uid="uid://dhatjxtb82aec"]

[ext_resource type="Script" uid="uid://d0wie22gd7bnn" path="res://scripts/main.gd" id="1_u3cgo"]
[ext_resource type="PackedScene" uid="uid://diethwnid64u8" path="res://scenes/ground.tscn" id="2_6iuii"]
[ext_resource type="Texture2D" uid="uid://cy6wdch2xusrb" path="res://assets/sprites/background.png" id="2_gxotb"]
[ext_resource type="PackedScene" uid="uid://cs10gw2j0jish" path="res://scenes/main_ui.tscn" id="2_lrhvr"]
[ext_resource type="SpriteFrames" uid="uid://p7rd2mp6hode" path="res://assets/sprites/squid_frames.tres" id="4_gliqc"]
[ext_resource type="Script" uid="uid://cohkqpve7buuk" path="res://scripts/fake_character.gd" id="5_b4alf"]

[sub_resource type="Animation" id="Animation_0s71g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_etxy1"]
resource_name = "fade_to_transparent"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnrpr"]
_data = {
&"RESET": SubResource("Animation_0s71g"),
&"fade_to_transparent": SubResource("Animation_etxy1")
}

[node name="Main" type="Node"]
script = ExtResource("1_u3cgo")

[node name="Anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../RestartFade")
libraries = {
&"": SubResource("AnimationLibrary_jnrpr")
}

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(324, 520)
scale = Vector2(4.5, 4.5)
texture = ExtResource("2_gxotb")

[node name="World" type="Node" parent="."]
unique_name_in_owner = true

[node name="FakeCharacter" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(212, 400)
scale = Vector2(4.5, 4.5)
sprite_frames = ExtResource("4_gliqc")
script = ExtResource("5_b4alf")

[node name="Ground" parent="." instance=ExtResource("2_6iuii")]
position = Vector2(320, 848)

[node name="MainUI" parent="." instance=ExtResource("2_lrhvr")]

[node name="RestartFade" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="start_game" from="MainUI" to="." method="_on_main_ui_start_game"]
